--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <head> <link rel="stylesheet" href="assets\css\style.css">
         <meta charset="UTF-8"/>
         <title>Run Buddy</title>
     </head>
     <body>
  <!-- navigation -->
 <header>
- <h1>RUN BUDDY</h1>
+ <h1 style="color: blue; font-size 100px;">
+  <a href="/">RUN BUDDY</a>
+</h1>
  <nav>
  <!--unordered list element-->
 <ul>
