--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
  <!-- navigation -->
 <header>
- <h1 style="color: blue; font-size 100px;">
+ <h1 style="color: blue; font-size;">
   <a href="/">RUN BUDDY</a>
 </h1>
  <nav>
