--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </header>
 
 <!-- Hero/jumbotron -->
-<section>
+<section class="hero">
     <div>
       <h3>Get Started Today!</h3>
         <p>Fill out this form and one of our trainers will schedule a consult.</p>
