--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> <link rel="stylesheet" href="assets\css\style.css">
+    <head> <link rel="stylesheet" href="assets\css\style.css"/>
         <meta charset="UTF-8"/>
         <title>Run Buddy</title>
     </head>
@@ -174,7 +174,7 @@
 <footer>
     <h2>&#10084;&#65039; Made with love by Run Buddy.</h2>
     <div>
-        <a href="#">Read Our Privacy Policy</a>
+        <a href="./privacy-policy.html">Read Our Privacy Policy</a>
         <br />
         &copy; 2019 Run Buddy, Inc. 
      </div>
