--- a/index.html
+++ b/index.html
@@ -158,6 +158,18 @@
          allowfullscreen="" 
          loading="lazy">
         </iframe>
+        <div class="contact-form">
+            <h3>Contact Us</h3>
+            <form>
+                <label for="contact-name">Cheryl Cruz</label>
+                <input type="text"  id="contact-name" placeholder="Cheryl Cruz" />
+   
+                <label for="contact-message">Message</label>
+                <textarea id="contact-message" placeholder="Message"></textarea>
+   
+                <button type="submit">Submit</button>
+            </form>
+            </div>
     
     <div>
         <h3>Run Buddy</h3>
