flex added in what we do

--- a/index.html
+++ b/index.html
@@ -71,16 +71,25 @@
 
 <!--"what we do section"-->
 <section id="what-we-do" class="intro">
-    <h2 class="section-title primary-border">What We Do</h2>
+    <div class="flex-row">
+    <h2 class="section-title primary-border">
+        What We Do
+    </h2>
+    </div>
+    <div class="flex-row">
     <p>
         butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX
     </p>
+    </div>
 </section>
 
 <!--"what you do" section-->
 <section id="what-you-do" class="steps">
-    <h2 class="section-title primary-border">What You Do</h2>
-
+    <div class="flex-row">
+    <h2 class="section-title primary-border">
+        What You Do
+    </h2>
+    </div>
     <div>
         <img src="./assets/images/step-1.svg" alt="" />
         <h3><span>Step 1: Fill Out the Form Above.</span></h3>
@@ -109,9 +118,11 @@
 
 <!-- "meet the trainers"section -->
 <section id="your-trainers" class="trainers">
+    <div class="flex-row">
     <h2 class="section-title primary-border">
         Meet The Trainers
     </h2>
+    </div>
     <article class="trainer">
         <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
         <div class="trainer-bio text-left">
@@ -151,8 +162,12 @@
 
 <!-- "reach out" section -->
 <section id="reach-out" class="contact">
-    <h2 class="section-title secondary-border">Reach Out</h2>
-    <div class="contact-info">
+    <div class="flex-row">
+    <h2 class="section-title secondary-border">
+        Reach Out
+    </h2>
+    </div>
+     <div class="contact-info">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3467.8087593499035!2d-98.40855424831815!3d29.638297181943834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c8937e14aa607%3A0xb8a6871524342e3d!2s4303%20Palm%20Point%2C%20San%20Antonio%2C%20TX%2078259!5e0!3m2!1sen!2sus!4v1644029070837!5m2!1sen!2sus"
          style="border:0;" 
          allowfullscreen="" 
